Minor fix to docker compose command

--- a/.github/workflows/push-to-acr.yml
+++ b/.github/workflows/push-to-acr.yml
@@ -19,7 +19,7 @@ jobs:
           password: ${{ secrets.AZ_SP_CLIENT_SECRET }}
 
       - name: Build Docker image
-        run: docker-compose build
+        run: docker compose build
 
       - name: Push Docker image to Azure Container Registry
         run: |
