--- a/.github/workflows/backend-images-ci.yml
+++ b/.github/workflows/backend-images-ci.yml
@@ -24,50 +24,53 @@ jobs:
       - name: Pushing External Factors image to Docker Hub
         run: docker push rolandomesagdp/external_factors:latest
 
-  # build_and_push_insurance_offers:
-  #   runs-on: ubuntu-latest
+  build_and_push_insurance_offers:
+    runs-on: ubuntu-latest
 
-  #   steps:
-  #     - name: Check out the repo
-  #       uses: actions/checkout@v4
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v4
 
-  #     - name: Build Insurance Offers Docker image
-  #       run: docker build -t rolandomesagdp/insurance_offers:latest -f src/InsuranceOffers.Api/Dockerfile .
+      - name: Build Insurance Offers Docker image
+        working-directory: ./micro-services-backends
+        run: docker build -t rolandomesagdp/insurance_offers:latest -f src/InsuranceOffers.Api/Dockerfile .
 
-  #     - name: Login to Docker Hub
-  #       run: docker login --username ${{ secrets.DOCKERHUB_USERNAME }} --password ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Login to Docker Hub
+        run: docker login --username ${{ secrets.DOCKERHUB_USERNAME }} --password ${{ secrets.DOCKERHUB_TOKEN }}
 
-  #     - name: Pushing Insurance Offers image to Docker Hub
-  #       run: docker push rolandomesagdp/insurance_offers:latest
+      - name: Pushing Insurance Offers image to Docker Hub
+        run: docker push rolandomesagdp/insurance_offers:latest
 
-  # build_and_push_product_discounts:
-  #   runs-on: ubuntu-latest
+  build_and_push_product_discounts:
+    runs-on: ubuntu-latest
 
-  #   steps:
-  #     - name: Check out the repo
-  #       uses: actions/checkout@v4
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v4
 
-  #     - name: Build Product Discounts Docker image
-  #       run: docker build -t rolandomesagdp/products_discounts:latest -f src/ProductDiscounts.Api/Dockerfile .
+      - name: Build Product Discounts Docker image
+        working-directory: ./micro-services-backends
+        run: docker build -t rolandomesagdp/products_discounts:latest -f src/ProductDiscounts.Api/Dockerfile .
 
-  #     - name: Login to Docker Hub
-  #       run: docker login --username ${{ secrets.DOCKERHUB_USERNAME }} --password ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Login to Docker Hub
+        run: docker login --username ${{ secrets.DOCKERHUB_USERNAME }} --password ${{ secrets.DOCKERHUB_TOKEN }}
 
-  #     - name: Pushing Product Disctounts image to Docker Hub
-  #       run: docker push rolandomesagdp/products_discounts:latest
+      - name: Pushing Product Disctounts image to Docker Hub
+        run: docker push rolandomesagdp/products_discounts:latest
 
-  # build_and_push_insurance_pricer:
-  #   runs-on: ubuntu-latest
+  build_and_push_insurance_pricer:
+    runs-on: ubuntu-latest
 
-  #   steps:
-  #     - name: Check out the repo
-  #       uses: actions/checkout@v4
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v4
 
-  #     - name: Build Insurance Pricer Docker image
-  #       run: docker build -t rolandomesagdp/insurance_pricer:latest -f src/VehicleInsurancePricer.Api/Dockerfile .
+      - name: Build Insurance Pricer Docker image
+        working-directory: ./micro-services-backends
+        run: docker build -t rolandomesagdp/insurance_pricer:latest -f src/VehicleInsurancePricer.Api/Dockerfile .
 
-  #     - name: Login to Docker Hub
-  #       run: docker login --username ${{ secrets.DOCKERHUB_USERNAME }} --password ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Login to Docker Hub
+        run: docker login --username ${{ secrets.DOCKERHUB_USERNAME }} --password ${{ secrets.DOCKERHUB_TOKEN }}
 
-  #     - name: Pushing Insurance Pricer image to Docker Hub
-  #       run: docker push rolandomesagdp/insurance_pricer:latest
+      - name: Pushing Insurance Pricer image to Docker Hub
+        run: docker push rolandomesagdp/insurance_pricer:latest
