--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,9 @@
 /docker-volumes
+
+# Visual Studio Code
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+.history/*
